--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ importFrom(brms,variables)
 importFrom(dplyr,group_by)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(package,"function")
 importFrom(tidybayes,compare_levels)
 importFrom(tidybayes,gather_draws)
 importFrom(tidybayes,mode_hdi)
