--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/johnsonpc2/ezbayes
 BugReports: https://github.com/johnsonpc2/ezbayes/issues
+Imports: 
+    brms,
+    dplyr,
+    ggplot2,
+    tidybayes
