--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 export(dichot_model)
 importFrom(brms,brm)
+importFrom(brms,prior)
 importFrom(brms,variables)
 importFrom(dplyr,group_by)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(graphics,pairs)
 importFrom(tidybayes,compare_levels)
 importFrom(tidybayes,gather_draws)
 importFrom(tidybayes,mode_hdi)
